Fixed letter-spacing #1

--- a/modules/quote/quote.scss
+++ b/modules/quote/quote.scss
@@ -20,6 +20,8 @@
 		&text{
 			position: relative;
 
+			letter-spacing: .025em;
+
 			// pseudoelements
 			&::before{
 				content: '';
